Make the notifications block fixed on large and medium screens
Currently when an error occurs, notifications of the error appear
in the top-right of the page. However, this makes it easy to miss
them if you are scrolled to a point where they don't appear on
screen.

This commit fixes that for situations where there is enough screen
space to deal with notifications being fixed in position by fixing
them in the top-right of the screen just below the navbar, rather
than having them able to scroll out of view.

--- a/src/theme/base/notification.less
+++ b/src/theme/base/notification.less
@@ -34,13 +34,15 @@
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        top: @error-container-margin-vertical;
+        position: fixed;
+        top: calc(@error-container-margin-vertical + @navbar-height);
         right: @error-container-margin-horizontal;
         width: @error-container-max-width;
     }
 
     @media (min-width: @screen-lg-min) {
-        top: @error-container-margin-vertical;
+        position: fixed;
+        top: calc(@error-container-margin-vertical + @navbar-height);
         right: @error-container-margin-horizontal;
         width: @error-container-max-width;
     }
